--- a/ExempelApp/MultiTenant/WebApplication/Views/Shared/_Layout.cshtml
+++ b/ExempelApp/MultiTenant/WebApplication/Views/Shared/_Layout.cshtml
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
-    <title>@ViewBag.Title - Contoso University @System.Configuration.ConfigurationManager.AppSettings["ApplicationName"]</title>
+    <title>@ViewBag.Title - Contoso University</title>
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
     <script type='text/javascript'>
@@ -27,6 +27,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
+                <!-- System.Configuration.ConfigurationManager.AppSettings["ApplicationName"] är koden som behöver bytas ut -->
                 @Html.ActionLink(System.Configuration.ConfigurationManager.AppSettings["ApplicationName"], "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
             </div>
             <div class="navbar-collapse collapse">
