--- a/ExempelApp/MultiTenantShardedRow/WebApplication/Views/Course/Create.cshtml
+++ b/ExempelApp/MultiTenantShardedRow/WebApplication/Views/Course/Create.cshtml
@@ -56,7 +56,7 @@
 }
 
 <div>
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Back to List", "Index", new {tenantID = Model.TenantID})
 </div>
 
 @section Scripts {
