--- a/ExempelApp/MultiTenantShardedRow/WebApplication/Views/Course/Details.cshtml
+++ b/ExempelApp/MultiTenantShardedRow/WebApplication/Views/Course/Details.cshtml
@@ -45,6 +45,6 @@
     </dl>
 </div>
 <p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.CourseID }) |
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Edit", "Edit", new { id = Model.CourseID , tenantID = Model.TenantID}) |
+    @Html.ActionLink("Back to List", "Index", new {tenantID = Model.TenantID})
 </p>
