--- a/ExempelApp/MultiTenant/WebApplication/Views/Course/Edit.cshtml
+++ b/ExempelApp/MultiTenant/WebApplication/Views/Course/Edit.cshtml
@@ -57,7 +57,7 @@
 }
 
 <div>
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Back to List", "Index", new { tenantId = Context.Request.QueryString["tenantId"] })
 </div>
 
 @section Scripts {
