Cleaning of code

--- a/ExempelApp/MultiTenantShardedRow/WebApplication/Views/Course/Create.cshtml
+++ b/ExempelApp/MultiTenantShardedRow/WebApplication/Views/Course/Create.cshtml
@@ -56,7 +56,7 @@
 }
 
 <div>
-    @Html.ActionLink("Back to List", "Index", new { tenantID = Context.Request.QueryString["TenantId"] })
+    @Html.ActionLink("Back to List", "Index", new { tenantId = Context.Request.QueryString["TenantId"] })
 </div>
 
 @section Scripts {
