--- a/ExempelApp/MultiTenantShardedRow/WebApplication/Views/Course/Edit.cshtml
+++ b/ExempelApp/MultiTenantShardedRow/WebApplication/Views/Course/Edit.cshtml
@@ -57,7 +57,7 @@
     }
 
     <div>
-            @Html.ActionLink("Back to List", "Index", new {tenantID = Model.TenantID})
+            @Html.ActionLink("Back to List", "Index", new { tenantId = Context.Request.QueryString["TenantId"] })
     </div>
 
     @section Scripts {
