--- a/ExempelApp/MultiTenantShardedRow/WebApplication/Views/Instructor/Create.cshtml
+++ b/ExempelApp/MultiTenantShardedRow/WebApplication/Views/Instructor/Create.cshtml
@@ -84,7 +84,7 @@
 }
 
 <div>
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Back to List", "Index", new { tenantId = Context.Request.QueryString["TenantId"] })
 </div>
 
 @section Scripts {
