--- a/ExempelApp/MultiTenantShardedRow/WebApplication/Views/Course/Delete.cshtml
+++ b/ExempelApp/MultiTenantShardedRow/WebApplication/Views/Course/Delete.cshtml
@@ -50,7 +50,7 @@
 
         <div class="form-actions no-color">
             <input type="submit" value="Delete" class="btn btn-default" /> |
-            @Html.ActionLink("Back to List", "Index", new { tenantID = Model.TenantID})
+            @Html.ActionLink("Back to List", "Index", new { tenantId = Context.Request.QueryString["TenantId"] })
         </div>
     }
 </div>
