--- a/ExempelApp/MultiTenantShardedRow/WebApplication/Views/Course/Details.cshtml
+++ b/ExempelApp/MultiTenantShardedRow/WebApplication/Views/Course/Details.cshtml
@@ -45,6 +45,6 @@
     </dl>
 </div>
 <p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.CourseID , tenantID = Model.TenantID}) |
-    @Html.ActionLink("Back to List", "Index", new {tenantID = Model.TenantID})
+    @Html.ActionLink("Edit", "Edit", new { id = Model.CourseID , tenantId = Context.Request.QueryString["TenantId"]}) |
+    @Html.ActionLink("Back to List", "Index", new { tenantId = Context.Request.QueryString["TenantId"] })
 </p>
