--- a/ExempelApp/MultiTenantShardedRow/WebApplication/Views/Course/UpdateCourseCredits.cshtml
+++ b/ExempelApp/MultiTenantShardedRow/WebApplication/Views/Course/UpdateCourseCredits.cshtml
@@ -25,6 +25,6 @@
     </p>
 }
 <div>
-    @Html.ActionLink("Back to List", "Index", new {tenantID = Model.TenantID})
+    @Html.ActionLink("Back to List", "Index", new { tenantId = Context.Request.QueryString["TenantId"] })
 </div>
 
