--- a/ExempelApp/MultiTenantShardedRow/WebApplication/Views/Instructor/Edit.cshtml
+++ b/ExempelApp/MultiTenantShardedRow/WebApplication/Views/Instructor/Edit.cshtml
@@ -86,7 +86,7 @@
 }
 
 <div>
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Back to List", "Index", new { tenantId = Context.Request.QueryString["TenantId"] })
 </div>
 
 @section Scripts {
