--- a/ExempelApp/MultiTenantSharded/WebApplication/Views/Course/Details.cshtml
+++ b/ExempelApp/MultiTenantSharded/WebApplication/Views/Course/Details.cshtml
@@ -45,6 +45,6 @@
     </dl>
 </div>
 <p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.CourseID }) |
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Edit", "Edit", new { id = Model.CourseID, tenantId = Context.Request.QueryString["tenantId"] }) |
+    @Html.ActionLink("Back to List", "Index", new { tenantId = Context.Request.QueryString["tenantId"] })
 </p>
