--- a/ExempelApp/MultiTenantSharded/WebApplication/Views/Student/Index.cshtml
+++ b/ExempelApp/MultiTenantSharded/WebApplication/Views/Student/Index.cshtml
@@ -9,7 +9,7 @@
 <h2>Students</h2>
 
 <p>
-    @Html.ActionLink("Create New", "Create")
+    @Html.ActionLink("Create New", "Create", new { tenantId = Context.Request.QueryString["tenantId"] })
 </p>
 @using (Html.BeginForm("Index", "Student", FormMethod.Get))
 {
@@ -46,9 +46,9 @@
                 @Html.DisplayFor(modelItem => item.EnrollmentDate)
             </td>
             <td>
-                @Html.ActionLink("Edit", "Edit", new { id = item.ID }) |
-                @Html.ActionLink("Details", "Details", new { id = item.ID }) |
-                @Html.ActionLink("Delete", "Delete", new { id = item.ID })
+                @Html.ActionLink("Edit", "Edit", new { id = item.ID, tenantId = Context.Request.QueryString["tenantId"] }) |
+                @Html.ActionLink("Details", "Details", new { id = item.ID, tenantId = Context.Request.QueryString["tenantId"] }) |
+                @Html.ActionLink("Delete", "Delete", new { id = item.ID, tenantId = Context.Request.QueryString["tenantId"] })
             </td>
         </tr>
     }
